@@ -1,5 +1,5 @@
 # Version Identifier
-version = 2.1.0_FM_SNAPSHOT-2014-02-04
+version = 2.1.0_FM_ORCJAVA-411
 
 # Compile with debug information included
 build.debug = true
